--- a/todo.css
+++ b/todo.css
@@ -3,8 +3,10 @@ body {
 }
 
 todo > div {
-	background: rgba(255,255,255,0.4);
+	background: url(lined_paper.png);
 	padding: 20px;
+	max-width: 1000px;
+	margin: 20px auto;
 }
 
 todo input[type=text]:read-only {
