--- a/todo.css
+++ b/todo.css
@@ -1,12 +1,17 @@
 body {
 	background: url(ricepaper.png);
+	background-color: rgb(70,30,0);
+	background-blend-mode: overlay;
 }
 
 todo > div {
 	background: url(lined_paper.png);
+	background-color: rgba(255,255,0,0.2);
+	background-blend-mode: overlay;
 	padding: 20px;
 	max-width: 1000px;
 	margin: 20px auto;
+	box-shadow: 0px 5px 10px rgba(0,0,0,0.4);
 }
 
 todo input[type=text]:read-only {
