--- a/css/todo.css
+++ b/css/todo.css
@@ -1,11 +1,11 @@
 body {
-	background: url(ricepaper.png);
+	background: url(../ricepaper.png);
 	background-color: rgb(70,30,0);
 	background-blend-mode: overlay;
 }
 
 todo > div {
-	background: url(lined_paper.png);
+	background: url(../lined_paper.png);
 	background-color: rgba(255,255,0,0.2);
 	background-blend-mode: overlay;
 	padding: 20px;
@@ -14,8 +14,12 @@ todo > div {
 	box-shadow: 0px 5px 10px rgba(0,0,0,0.4);
 }
 
+todo input[type=text] {
+	color: #111;
+}
+
 todo input[type=text]:read-only {
 	background: none;
 	border: none;
-	box-shadow: none;
+	box-shadow: none;	
 }
