--- a/css/todo.css
+++ b/css/todo.css
@@ -2,6 +2,7 @@ body {
 	background: url(../ricepaper.png);
 	background-color: rgb(70,30,0);
 	background-blend-mode: overlay;
+	height: auto;
 }
 
 todo > div {
@@ -16,10 +17,15 @@ todo > div {
 
 todo input[type=text] {
 	color: #111;
+	width: 99%;
 }
 
 todo input[type=text]:read-only {
 	background: none;
 	border: none;
 	box-shadow: none;	
+}
+
+todo .button {
+	text-shadow: 0px 1px 4px rgba(0,0,0,0.6);
 }
