--- a/css/todo.css
+++ b/css/todo.css
@@ -1,15 +1,15 @@
 @import url(https://fonts.googleapis.com/css?family=Tillana:400,500);
 
 body {
-	background: url(../ricepaper.png);
-	background-color: rgb(70,30,0);
+	background: url(../img/retina_wood.png);
+	background-color: rgba(70,30,0,0.7);
 	background-blend-mode: overlay;
 	height: auto;
 	font-family: 'Tillana', cursive;
 }
 
 todo > div {
-	background: url(../lined_paper.png);
+	background: url(../img/lined_paper.png);
 	background-color: rgba(255,255,0,0.2);
 	background-blend-mode: overlay;
 	padding: 20px;
@@ -21,6 +21,7 @@ todo > div {
 todo input[type=text] {
 	color: #111;
 	width: 99%;
+	font-weight: 500;
 }
 
 todo input[type=text]:read-only {
